2008-02-17	Marzo Sette Torres Junior <marzojr@yahoo.com>
	UCC: Fixed usecode structs generating wrong indices into array. Fixed aliases
	to structs and classes so they can be of differing base types. Static structs
	can now be dlaclared.

2008-02-16	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* usecode/ucsched.*, usecode/ucscriptop.h: Implemented two new opcodes from
	  the originals: wait_while_near and wait_while_far, which cause the script
	  to halt depending on the avatar's distance from the script object. Step
	  opcode 0x53 has been revised with a (verified) delta-z parameter. Due to
	  SI's buggy usecode, which neglects to add this extra parameter on any of
	  the uses of this opcode, most of the steps taken with this opcode will
	  fail to happen -- which incidentally also happens in the original games.
	* usecode/ucinternal.cc: Added opcodes to perform the following operations
	  with usecode class member variables: array loop, aidx, set array elem.
	  Also slightly modified aidx so that it exactly matches the originals.
	  Allowing array size changes in BG too, as it is possible, even if it is
	  not used, in the original.
	* usecode/compiler/*: Added usecode structs; they are defined like classes,
	  except that they cannot have member functions and do not have inheritance.
	  They also have minimal type-checking, unlike classes, being thin wrappers
	  around normal usecode arrays. Example definition and use:
		struct Tile { var x; var y; var z; }	// Definition
		struct<Tile> pos = get_object_position();
		pos.x += 1;
	  Structs with struct members simply merge the variables of the inner struct.
	  For example, using the Tile struct above,
		struct Obj { var object; struct<Tile> pos; }
	  is completely equivalent to
		struct Obj { var object; var x; var y; var z; }
	  In fact, the 'pos' member struct can be defined without a name:
		struct Obj { var object; struct<Tile>; }
	  Also added reference or alias variables, which are a relabelling of the